--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,13 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+ul,
+li {
+	list-style-type: circle;
+	padding-left: 16px;
+}
+
+li {
+	padding-left: 4px;
+}
